--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ ibm-cos-sdk-s3transfer==2.14.3
 ibm_watsonx_ai==1.3.34
 idna==3.10
 Jinja2==3.1.6
+matplotlib
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
